--- a/CSS/main.css
+++ b/CSS/main.css
@@ -40,8 +40,7 @@ body {
 }
 
 .navbar .navbar-nav .dropdown .dropdown-menu {
-    left: -50%;
-    padding: 20px 10px;
+    padding: 20px 0 10px;
     margin-top: 14px;
     text-align: center;
     border: none;
@@ -52,7 +51,7 @@ body {
     display: inline-block;
     top: 0;
     position: absolute;
-    margin-right: .255em;
+    /* margin-right: .255em; */
     vertical-align: .255em;
     content: "";
     border-bottom: 0.7em solid;
@@ -60,12 +59,13 @@ body {
     border-top: 0;
     border-left: 0.5em solid transparent;
     color: #ed3239;
+    left: 43%;
 }
 
 .navbar .navbar-nav .dropdown .dropdown-menu .dropdown-item {
     color: #707070 !important;
     font-size: 18px;
-    padding: 10px 24px;
+    padding: 10px 10px;
 }
 
 .navbar .navbar-nav .dropdown .dropdown-menu .dropdown-item:hover {
