--- a/CSS/AR_style.css
+++ b/CSS/AR_style.css
@@ -3,7 +3,7 @@
 
 * {
     font-family: "Cairo";
-    direction: rtl;
+    direction: rtl; 
 }
 /* ============== Start footer =============== */
 footer .footerSections .footerSection .footerLinks {
@@ -21,6 +21,10 @@ footer .footerSections .footerSection .footerLinks {
 .navbar .navbar-nav .dropdown .dropdown-menu {
     left: -150%;
     width: 230px;
+}
+
+.navbar .navbar-nav .dropdown.connectWithUsDropDown .dropdown-menu {
+    left: -70px;
 }
 /* ################### End Global ################### */
 
@@ -219,6 +223,31 @@ main .mainTools ul li {
 }   
 /* ============== End jobsDetails =============== */
 /* ################### End jobs Page ################### */
+
+
+/* ################### Start connect_with_us Page ################### */
+/* ============== Start connectWithUsDetails =============== */
+.connectWithUsDetails .connectWithUsDetailsHeader {
+    padding: 0 10px 0 0;
+}
+
+.connectWithUsDetails .connectWithUsDetailsHeader:after {
+    right: 0;
+}   
+
+.connectWithUsDetails .connectWithUsData form .radioBtnsSec label {
+    padding-right: 20px;
+}
+
+.connectWithUsDetails .connectWithUsData form .radioBtnsSec .checkmark {
+    right: 0;
+}
+
+.connectWithUsDetails .connectWithUsData .connectImg img {
+    box-shadow: -30px 30px 0px #16acaa;
+}
+/* ============== End connectWithUsDetails =============== */
+/* ################### End connect_with_us Page ################### */
 
 
 /* ################### Start jobs Page ################### */
@@ -457,6 +486,15 @@ main .mainTools ul li {
 /* ################### End vehicles_converting Page ################### */
 
 
+/* ################### End call_us Page ################### */
+/* ============== Start callUsDetails =============== */
+.callUsDetails .callUsData {
+    direction: ltr !important;
+}
+/* ============== End callUsDetails =============== */
+/* ################### End call_us Page ################### */
+
+
 /* ################ Large devices (desktops, less than 1200px) ################ */
 @media (max-width: 1199.98px) {
     /* ################### Start Global ################### */
@@ -585,4 +623,13 @@ main .mainTools ul li {
     }
     /* ============== End aboutOurCompany =============== */
     /* ################### End briefAboutCompany Page ################### */
+
+
+    /* ################### Start connect_with_us Page ################### */
+    /* ============== Start connectWithUsDetails =============== */
+    .connectWithUsDetails .connectWithUsData .connectImg img {
+        box-shadow: -12px 12px 0px #16acaa;
+    }
+    /* ============== End connectWithUsDetails =============== */
+    /* ################### End connect_with_us Page ################### */
 }
