--- a/CSS/main.css
+++ b/CSS/main.css
@@ -456,6 +456,7 @@ main .mainTools ul li .toolSectionData a {
     margin: 0;
     color: #16acaa;
     font-size: 18px;
+    cursor: pointer;
 }
 
 main .mainTools ul li .toolSectionData a:hover {
@@ -506,6 +507,158 @@ main .mainTools ul li .toolSectionData input {
     color:#707070;
 }
 /* ============== End mainBranches =============== */
+
+
+/* ============== Start calculatorModal =============== */
+.calculatorModal .modal-header {
+    border: none;
+    padding: 30px 16px 20px;
+}
+
+.calculatorModal .modal-header .close {
+    background: #ed3239;
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    outline: none;
+    margin-left: 0px;
+}
+
+.calculatorModal .modal-header .close span {
+    color: #fff;
+    border-radius: 50%;
+}
+
+.calculatorModal .modal-header .close span i {
+    font-size: 20px;
+}
+
+.calculatorModal .modal-body {
+    padding: 10px 16px 30px;
+}
+
+.calculatorModal .modal-body .bodyContent {
+    border: 5px solid #16acaa;
+    border-radius: 10px;
+    padding: 20px;
+}
+
+.calculatorModal .modal-body .bodyContent .headerBody {
+    padding-bottom: 20px;
+}
+
+.calculatorModal .modal-body .bodyContent .headerBody h2 {
+    color: #ed3239;
+    font-size: 35px;
+    position: relative;
+    padding-bottom: 10px;
+}
+
+.calculatorModal .modal-body .bodyContent .headerBody h2::after {
+    position: absolute;
+    content: '';
+    height: 7px;
+    width: 70%;
+    top: 100%;
+    left: 15%;
+    border-radius: 10px;
+    background: #16acaa;
+}
+
+.calculatorModal .modal-body .bodyContent .fuelConsumption,
+.calculatorModal .modal-body .bodyContent .gasoline92,
+.calculatorModal .modal-body .bodyContent .naturalGas {
+    background: #16acaa;
+    padding: 10px;
+    margin: 10px 0;
+    border-radius: 5px;
+}
+
+.calculatorModal .modal-body .bodyContent .fuelConsumption h2,
+.calculatorModal .modal-body .bodyContent .gasoline92 h2,
+.calculatorModal .modal-body .bodyContent .naturalGas h2 {
+    color: #fff;
+    font-size: 25px;
+}
+
+.calculatorModal .modal-body .bodyContent .fuelConsumption input,
+.calculatorModal .modal-body .bodyContent .gasoline92 input,
+.calculatorModal .modal-body .bodyContent .naturalGas input {
+    padding: 5px;
+    width: 80px;
+    height: 60px;
+    text-align: center;
+    font-size: 20px;
+    color: #ed3239;
+    outline: none;
+    border: none;
+    font-weight: 600;
+    border-radius: 5px;
+}
+
+.calculatorModal .modal-body .bodyContent .fuelConsumption input::-webkit-outer-spin-button,
+.calculatorModal .modal-body .bodyContent .gasoline92 input::-webkit-outer-spin-button,
+.calculatorModal .modal-body .bodyContent .naturalGas input::-webkit-outer-spin-button,
+.calculatorModal .modal-body .bodyContent .fuelConsumption input::-webkit-inner-spin-button,
+.calculatorModal .modal-body .bodyContent .gasoline92 input::-webkit-inner-spin-button,
+.calculatorModal .modal-body .bodyContent .naturalGas input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
+
+.calculatorModal .modal-body .bodyContent .calcResult .calcBtnSec {
+    padding: 0;
+}
+
+.calculatorModal .modal-body .bodyContent .calcResult .calcBtnSec .calcBtn {
+    background: #ed3239;
+    text-align: center;
+    color: #fff;
+    font-size: 20px;
+    border: none;
+    outline: none;
+    padding: 31px 10px;
+    font-weight: 600;
+    border-radius: 5px;
+}
+
+.calculatorModal .modal-body .bodyContent .calcResult .resultSec {
+    background: #16acaa;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.calculatorModal .modal-body .bodyContent .calcResult .resultSec .saving h2 {
+    font-size: 25px;
+    color: #fff;
+}
+
+.calculatorModal .modal-body .bodyContent .calcResult .resultSec .monthlySavings h2,
+.calculatorModal .modal-body .bodyContent .calcResult .resultSec .annualSavings h2 {
+    font-size: 20px;
+    color: #fff;
+}
+
+.calculatorModal .modal-body .bodyContent .calcResult .resultSec .monthlySavings input,
+.calculatorModal .modal-body .bodyContent .calcResult .resultSec .annualSavings input {
+    padding: 5px;
+    width: 80px;
+    height: 40px;
+    text-align: center;
+    font-size: 20px;
+    color: #ed3239;
+    outline: none;
+    border: none;
+    font-weight: 600;
+    border-radius: 5px;
+}
+
+.calculatorModal .modal-body .bodyContent .errorMessageSection {
+    display: none;
+    padding-top: 10px;
+}
+/* ============== End calculatorModal =============== */
+
+
 /* ============== Start sliderAboutCompany =============== */
 .sliderAboutCompany {
     padding: 170px 0;
