--- a/CSS/main.css
+++ b/CSS/main.css
@@ -7,6 +7,10 @@ body {
     background: #cc2121;
     color: #fff;
 }
+
+html {
+    scroll-behavior: smooth;
+}
 /* ============== Start Navbar =============== */
 .navbar {
     background: #fff;
@@ -595,7 +599,7 @@ main .mainTools ul li .toolSectionData input {
     font-weight: 600;
     border-radius: 5px;
 }
-
+ 
 .calculatorModal .modal-body .bodyContent .fuelConsumption input::-webkit-outer-spin-button,
 .calculatorModal .modal-body .bodyContent .gasoline92 input::-webkit-outer-spin-button,
 .calculatorModal .modal-body .bodyContent .naturalGas input::-webkit-outer-spin-button,
@@ -826,7 +830,7 @@ main .mainTools ul li .toolSectionData input {
 .ourServices {
     width: 100%;
     position: absolute;
-    padding: 20px 0;
+    padding: 10px 0;
     background: #E5E5E5;
 }
 
@@ -835,7 +839,7 @@ main .mainTools ul li .toolSectionData input {
     font-size: 22px;
     font-weight: 600;
     position: relative;
-    margin: -100px 30px 0px;
+    margin: -70px 30px 0px;
 }
 
 .ourServices .ourServicesHeader:after {
@@ -908,7 +912,8 @@ main .mainTools ul li .toolSectionData input {
 
 .ourServices .paginator-center .buttonNextPrev {
     width: 47%;
-    top: 97%;
+    /* top: 97%; */
+    margin-top: 30px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -1772,6 +1777,10 @@ main .mainTools ul li .toolSectionData input {
     padding: 0 1em;
     cursor: pointer;
     pointer-events: none;
+}
+
+.jobsDetails .formAllInputs #labelUploadCv {
+    margin: 0;
 }
 
 .jobsDetails .formAllInputs input::placeholder,
